desktop - fixed dropdown menu spacing and size

--- a/assets/header.css
+++ b/assets/header.css
@@ -135,9 +135,10 @@ body {
     /* sublinks */
     .sublink-grandparent {
         position: absolute;
+        top: 15px;
         background-color: #ffffff;
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-        width: 300%;
+        width: 150%;
         border-radius: 8px;
         visibility: hidden;
         opacity: 0;
